# Notification-service

./: .env.example  .gitignore  DESIGN.md  Dockerfile  LICENSE  README.md  docker-compose.yml  export_openapi.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: analytics.py  notifications.py  preferences.py  webhooks.py
app/core/: config.py  exceptions.py  logging.py  metrics.py  rate_limiter.py  security.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: .gitkeep  0001_initial_schema.py
app/models/: __init__.py  idempotency_key.py  notification.py  notification_attempt.py  template.py  user_preference.py  webhook.py
app/providers/: base.py  circuit_breaker.py  mock_providers.py
app/queue/: priority_queue.py
app/repositories/: __init__.py  idempotency_repository.py  notification_repository.py  preference_repository.py
app/schemas/: __init__.py  common.py  notification.py  preference.py
app/services/: idempotency_service.py  preference_service.py  template_service.py  webhook_service.py
app/workers/: notification_worker.py  retry_scheduler.py
docker/: Dockerfile  docker-compose.yml
docs/: openapi.json
tests/: conftest.py
tests/integration/: test_health.py
tests/unit/: test_idempotency.py  test_preferences.py  test_queue.py  test_rate_limiter.py  test_templates.py  test_worker.py
